--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.0.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -18,6 +19,19 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@angular/service-worker": "^18.2.0",
+    "@ng-web-apis/common": "^4.11.1",
+    "@taiga-ui/addon-commerce": "^4.13.0",
+    "@taiga-ui/addon-mobile": "^4.13.0",
+    "@taiga-ui/cdk": "^4.13.0",
+    "@taiga-ui/core": "^4.13.0",
+    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/icons": "^4.13.0",
+    "@taiga-ui/kit": "^4.13.0",
+    "@taiga-ui/layout": "^4.13.0",
+    "@taiga-ui/legacy": "^4.13.0",
+    "@taiga-ui/styles": "^4.13.0",
+    "nanoid": "^5.0.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
